# VHF-ASR-LORA

./: README.md  paths.py  pyproject-backup.toml  pyproject.toml
gnu-radio-sim/: atc_am_rx-2.grc  atc_am_rx.grc  atc_am_rx.py  atc_am_rx_final.grc  atc_am_simulation-2.grc  atc_am_simulation.grc  atc_am_simulation.py  atc_am_tx-2.grc  atc_am_tx.grc  atc_am_tx.py  atc_am_tx_final.grc  audio_processing_pipe.py  prepare_audio.sh  vhf_noise_sim.py  vhf_noise_simulation.grc
notebooks/: [2026-04-29]-get-atc-data.ipynb  [2026-05-01]-synth-data-analysis-proc.ipynb  [2026-05-04]-poc-cnn-classifier.ipynb  [2026-05-12]-audio-bandpass-filter.ipynb  [2026-05-12]-get-unlab-data.ipynb  [2026-05-12]-synth-data-analysis-v2.ipynb
scripts/: audio_analysis.py  class_models.py  classify_dir.py  diagnose_data.py  eval_base_model.py  eval_classifiers.py  eval_pretrained_models.py  eval_simple.py  eval_whole_pipe.py  label_data.py  label_real_asr.py  load_real_data.py  simulate_audio_to_vhf.py  simulate_libre_data_to_vhf.py  train_classifiers.py  train_lora.py  train_lora_quick.py
