[project]
name = "vhf-asr"
version = "0.1.0"
requires-python = ">=3.13, < 3.14"
dependencies = [
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "ruff>=0.15.12",
]
